--- a/webroot/index.html
+++ b/webroot/index.html
@@ -12,9 +12,9 @@
   <section class="masthead">
     <header class="masthead__firstpart">
       <h1 class="logo__game">
-        <a href="logo_game">Game</a>
+        <a class="logo__game__header" href="logo_game">Game</a>
       </h1>
-      <nav class="logo">
+      <nav class="logo-navigation">
         <ul class="logo__navigation__list">
           <li class="logo__link logo__link_main"><a href="/main" class="logo__link__anchore"></a>main</li>
           <li class="logo__link logo__link_about"><a href="/about" class="logo__link__anchore"></a>about</li>
@@ -60,8 +60,10 @@
       <h4 class="logo__game__subtitle">
         Experiance new social battle royale game
       </h4>
-      <button>
-        Buy now on steam
+      <button class="logo__game__button">
+        <p>
+        Buy now on steam | $14.99
+        </P>
       </button>
     </header>
     <header class="masthead__thirdpart">
@@ -77,6 +79,46 @@
       </nav>
     </header>
   </section>
+  <main>
+    <section>
+      <h1>
+        what is sos?
+      </h1>
+      <h2>
+        Social battle royale game
+      </h2>
+      <p>
+        Each round, you and 15 other contestants compete to
+        escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
+        solo or form friendships with others to escape?
+       <div>
+        Making the right decisions could be the
+        difference between life and death.
+       </div>
+      </p>
+    </section>
+    <section>
+      <h1>
+        What’s so special?
+      </h1>
+      <h2>
+        features
+      </h2>
+      <h3>
+         Survuve at all costs
+      </h3>
+      <p>
+        You have 30 minutes to find a relic, signal for extraction, and grab
+        one of three spots on the rescue chopper.
+      </p>
+      <h3>
+        Create allies and anemies
+      </h3>
+      <h3>
+        impress the audiance
+      </h3>
+    </section>
+  </main>
 
 </body>
 
