--- a/webroot/index.html
+++ b/webroot/index.html
@@ -11,9 +11,7 @@
 <body>
   <section class="masthead">
     <header class="masthead__firstpart">
-      <h1 class="logo__game">
-        <a class="logo__game__header" href="logo_game">Game</a>
-      </h1>
+      <a class="logo__game__header" href="logo_game">Game</a>
       <nav class="logo-navigation">
         <ul class="logo__navigation__list">
           <li class="logo__link logo__link_main"><a href="/main" class="logo__link__anchore"></a>main</li>
@@ -33,6 +31,27 @@
           <option value="deu"> DEU </option>
         </select>
       </div>
+      <div class="bar"></div>
+      <svg width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g filter="url(#filter0_d)">
+          <rect x="13.9985" y="15.5166" width="13.585" height="1.5" rx="0.75" fill="white" stroke="black" />
+          <rect x="5.09619" y="8.01657" width="22.4873" height="1.5" rx="0.75" fill="white" stroke="black" />
+          <rect x="5.09619" y="0.516571" width="22.4873" height="1.5" rx="0.75" fill="white" stroke="black" />
+        </g>
+        <defs>
+          <filter id="filter0_d" x="0.596191" y="0.016571" width="31.4873" height="25.5" filterUnits="userSpaceOnUse"
+            color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" />
+            <feOffset dy="4" />
+            <feGaussianBlur stdDeviation="2" />
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+          </filter>
+        </defs>
+      </svg>
+
       <div class="game__box__union">
         <a href="/box" class="game__icone">
           <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -54,20 +73,20 @@
       </div>
     </header>
     <header class="masthead__secondpart">
-      <h2 class="logo__game__title">
+      <h1 class="logo__game__title">
         Survive at all costs
-      </h2>
+      </h1>
       <h4 class="logo__game__subtitle">
         Experiance new social battle royale game
       </h4>
       <button class="logo__game__button">
         <p>
-        Buy now on steam | $14.99
+          Buy now on steam | $14.99
         </P>
       </button>
     </header>
     <header class="masthead__thirdpart">
-      <p class="logo__game__paragraph">The story<span>▼</span></p>
+      <p class="logo__game__paragraph">The story</p>
       <nav class="logo__game__navigation">
         <ul class="logo__game__lists">
           <li class="logo__game__list">●</li>
@@ -91,10 +110,10 @@
         Each round, you and 15 other contestants compete to
         escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
         solo or form friendships with others to escape?
-       <div>
+      <div>
         Making the right decisions could be the
         difference between life and death.
-       </div>
+      </div>
       </p>
     </section>
     <section>
@@ -105,7 +124,7 @@
         features
       </h2>
       <h3>
-         Survuve at all costs
+        Survuve at all costs
       </h3>
       <p>
         You have 30 minutes to find a relic, signal for extraction, and grab
