Fixed mobile header

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -31,7 +31,7 @@
           <option value="deu"> DEU </option>
         </select>
       </div>
-      <div class="bar"></div>
+      <div class="bar">|</div>
       <svg width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g filter="url(#filter0_d)">
           <rect x="13.9985" y="15.5166" width="13.585" height="1.5" rx="0.75" fill="white" stroke="black" />
