--- a/webroot/index.html
+++ b/webroot/index.html
@@ -12,17 +12,20 @@
   <section class="masthead">
     <header class="masthead__firstpart">
       <a class="logo__game__header" href="logo_game">Game</a>
-      <nav class="logo-navigation">
-        <ul class="logo__navigation__list">
-          <li class="logo__link logo__link_main"><a href="/main" class="logo__link__anchore"></a>main</li>
-          <li class="logo__link logo__link_about"><a href="/about" class="logo__link__anchore"></a>about</li>
-          <li class="logo__link logo__link_feature"><a href="/game_feature" class="logo__link__anchore"></a>Feature game
-          </li>
-          <li class="logo__link logo__link_system"><a href="/system_requerement"
-              class="logo__link__anchore"></a>system_requerement</li>
-          <li class="logo__link logo__link_quote"><a href="/quote" class="logo__link__anchore"></a>Quote</li>
-        </ul>
-      </nav>
+      <div class="masthead__firstpart__list">
+        <nav class="logo-navigation">
+          <ul class="logo__navigation__list">
+            <li class="logo__link logo__link_main"><a href="/main" class="logo__link__anchore"></a>main</li>
+            <li class="logo__link logo__link_about"><a href="/about" class="logo__link__anchore"></a>about</li>
+            <li class="logo__link logo__link_feature"><a href="/game_feature" class="logo__link__anchore"></a>Feature
+              game
+            </li>
+            <li class="logo__link logo__link_system"><a href="/system_requerement"
+                class="logo__link__anchore"></a>system_requerement</li>
+            <li class="logo__link logo__link_quote"><a href="/quote" class="logo__link__anchore"></a>Quote</li>
+          </ul>
+        </nav>
+      </div>
       <div class="game__languages__choice">
         <select name="language" id="tl_select">
           <option value=""> ENG </option>
@@ -32,7 +35,7 @@
         </select>
       </div>
       <div class="bar">|</div>
-      <svg width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <svg class="bar-icon" width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g filter="url(#filter0_d)">
           <rect x="13.9985" y="15.5166" width="13.585" height="1.5" rx="0.75" fill="white" stroke="black" />
           <rect x="5.09619" y="8.01657" width="22.4873" height="1.5" rx="0.75" fill="white" stroke="black" />
@@ -54,7 +57,8 @@
 
       <div class="game__box__union">
         <a href="/box" class="game__icone">
-          <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="game-icon1" width="31" height="31" viewBox="0 0 31 31" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
             <path
               d="M10.5514 2.85846C12.1356 3.47967 13.667 4.30015 15.1104 5.3023C15.2747 5.41365 15.4625 5.47225 15.6502 5.47225C15.838 5.47225 16.0257 5.41365 16.19 5.3023C17.6334 4.30015 19.1648 3.47381 20.7491 2.8526C21.107 2.71195 21.3476 2.36032 21.3417 1.97352C21.3417 1.58673 21.1011 1.24096 20.7373 1.10616C17.5689 -0.0952431 13.7315 -0.0952431 10.569 1.10616C10.211 1.24096 9.9646 1.59259 9.9646 1.97352C9.9646 2.35445 10.1876 2.71781 10.5514 2.85846Z"
               fill="#FFB548" />
@@ -64,7 +68,8 @@
           </svg>
         </a>
         <a href="/union" class="game__icon">
-          <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="game-icon2" width="31" height="31" viewBox="0 0 31 31" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
               d="M15.7746 30.2089C24.0936 30.2089 30.8375 23.4932 30.8375 15.2089C30.8375 6.92465 24.0936 0.208923 15.7746 0.208923C7.45558 0.208923 0.71167 6.92465 0.71167 15.2089C0.71167 16.7369 0.941106 18.2116 1.36754 19.6006C1.47636 19.6201 1.6523 19.6647 1.90866 19.7395L1.50834 13.467C1.50834 13.352 1.7031 13.2967 1.88153 13.246C1.97946 13.2182 2.07247 13.1918 2.12567 13.1577C2.27094 13.0663 5.26258 14.154 5.42239 14.2262L9.248 15.9495C10.2359 15.3285 11.4175 15.0782 12.5797 15.2467L16.0566 11.0252C16.1002 7.65576 18.8604 4.94092 22.2551 4.93611C25.4269 4.9698 28.0564 7.37657 28.3567 10.5102C28.6763 13.8989 26.1775 16.9026 22.7684 17.2251L16.9767 21.3407C16.6232 23.1457 15.3254 24.6235 13.5724 25.2108C10.8848 26.1157 7.96472 24.6813 7.05917 22.0049L5.04467 21.3407C4.89531 21.2934 2.15386 20.1577 1.41129 19.7406C3.34051 25.8099 9.04168 30.2089 15.7746 30.2089ZM25.3546 11.0974C25.3546 12.7988 23.967 14.178 22.2553 14.178C20.5436 14.178 19.156 12.7988 19.156 11.0974C19.156 9.39595 20.5436 8.01669 22.2553 8.01669C23.967 8.01669 25.3546 9.39595 25.3546 11.0974ZM24.3236 11.0974C24.3236 12.2325 23.3978 13.1528 22.2557 13.1528C21.1137 13.1528 20.1879 12.2325 20.1879 11.0974C20.1879 9.96222 21.1137 9.04199 22.2557 9.04199C23.3978 9.04199 24.3236 9.96222 24.3236 11.0974ZM10.5804 23.1121C10.9969 23.3142 11.4569 23.4201 11.9218 23.4201C12.2753 23.4201 12.6191 23.3624 12.9581 23.2516C13.7377 22.9821 14.3721 22.4189 14.7304 21.6824C15.4761 20.1469 14.8272 18.3081 13.2873 17.5669C13.0259 17.4417 12.7208 17.5476 12.5949 17.8027C12.469 18.0627 12.5755 18.3659 12.8322 18.4911C12.8661 18.5055 12.9 18.5199 12.9338 18.5392C13.9508 19.0591 14.343 20.2961 13.82 21.307C13.297 22.3178 12.0477 22.7077 11.0356 22.1879C10.7741 22.0627 10.469 22.1686 10.3431 22.4237C10.2172 22.6837 10.3238 22.9869 10.5804 23.1121Z"
               fill="#FFB548" />
@@ -86,7 +91,9 @@
       </button>
     </header>
     <header class="masthead__thirdpart">
-      <p class="logo__game__paragraph">The story</p>
+      <div class="logo__story">
+        <p class="logo__story__game__paragraph">The story</p>
+      </div>
       <nav class="logo__game__navigation">
         <ul class="logo__game__lists">
           <li class="logo__game__list">●</li>
