--- a/webroot/index.html
+++ b/webroot/index.html
@@ -116,24 +116,35 @@
     </header>
   </section>
   <main>
-    <section>
-      <h1>
-        what is sos?
-      </h1>
-      <h2>
-        Social battle royale game
-      </h2>
-      <p>
-        Each round, you and 15 other contestants compete to
-        escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
-        solo or form friendships with others to escape?
-      <div>
-        Making the right decisions could be the
-        difference between life and death.
+    <section class="game__first__section">
+      <div class="container">
+        <div class="game__first__section__heading">
+          <h1 class="game__first__section--header">
+            what is sos?
+          </h1>
+          <h2 class="game__first__section--subheader">
+            Social battle royale game
+          </h2>
+        </div>
+        <div class="game__first__section--paragraph">
+          <p class="game__first__section__paragraph--detail">
+            Each round, you and 15 other contestants compete to
+            escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
+            solo or form friendships with others to escape?
+          </p>
+          <p class="game__first__section__paragraph--detail">
+            Making the right decisions could be the
+            difference between life and death.
+          </p>
+        </div>
+        <div>
+          <img class="screenshot1" src="./css/images/screenshot1.png" alt="screen1">
+          <img class="screenshot2" src="./css/images/screenshot2.png" alt="screen2">
+          <img class="screenshot3" src="./css/images/screenshot3.png" alt="screen">
+        </div>
       </div>
-      </p>
     </section>
-    <section>
+    <!-- <section>
       <h1>
         What’s so special?
       </h1>
@@ -153,7 +164,7 @@
       <h3>
         impress the audiance
       </h3>
-    </section>
+    </section> -->
   </main>
 
 </body>
