Styling the first section of the game

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -137,10 +137,12 @@
             difference between life and death.
           </p>
         </div>
-        <div>
-          <img class="screenshot1" src="./css/images/screenshot1.png" alt="screen1">
-          <img class="screenshot2" src="./css/images/screenshot2.png" alt="screen2">
-          <img class="screenshot3" src="./css/images/screenshot3.png" alt="screen">
+        <div class="game__images">
+          <ul class="game__images__lists">
+            <li class="game__images__list"> <img class="game__images__screenshot1" src="./css/images/screenshot1.png" alt="screen1"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot2" src="./css/images/screenshot2.png" alt="screen2"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot3" src="./css/images/screenshot3.png" alt="screen"></li>
+          </ul>
         </div>
       </div>
     </section>
@@ -166,6 +168,7 @@
       </h3>
     </section> -->
   </main>
+
 
 </body>
 
