Trying to set the image

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -139,9 +139,9 @@
         </div>
         <div class="game__images">
           <ul class="game__images__lists">
-            <li class="game__images__list"> <img class="game__images__screenshot1" src="./css/images/screenshot1.png" alt="screen1"></li>
-            <li class="game__images__list"> <img class="game__images__screenshot2" src="./css/images/screenshot2.png" alt="screen2"></li>
-            <li class="game__images__list"> <img class="game__images__screenshot3" src="./css/images/screenshot3.png" alt="screen"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot1 game__image" src="./css/images/screenshot1.png" alt="screen1"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot2 game__image" src="./css/images/screenshot2.png" alt="screen2"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot3 game__image" src="./css/images/screenshot3.png" alt="screen"></li>
           </ul>
         </div>
       </div>
