Change the image in html

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -139,14 +139,14 @@
         </div>
         <div class="game__images">
           <ul class="game__images__lists">
-            <li class="game__images__list"> <img class="game__images__screenshot1 game__image" src="./css/images/screenshot1.png" alt="screen1"></li>
-            <li class="game__images__list"> <img class="game__images__screenshot2 game__image" src="./css/images/screenshot2.png" alt="screen2"></li>
-            <li class="game__images__list"> <img class="game__images__screenshot3 game__image" src="./css/images/screenshot3.png" alt="screen"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot1 game__image" src="./css/images/screanshoot1.png" alt="screen1"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot2 game__image" src="./css/images/screanshoot2.png" alt="screen2"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot3 game__image" src="./css/images/screanshoot3.png" alt="screen"></li>
           </ul>
         </div>
       </div>
     </section>
-    <!-- <section>
+    <section>
       <h1>
         What’s so special?
       </h1>
@@ -166,7 +166,7 @@
       <h3>
         impress the audiance
       </h3>
-    </section> -->
+    </section>
   </main>
 
 
