fixed second section of the game

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -139,33 +139,40 @@
         </div>
         <div class="game__images">
           <ul class="game__images__lists">
-            <li class="game__images__list"> <img class="game__images__screenshot1 game__image" src="./css/images/screanshoot1.png" alt="screen1"></li>
-            <li class="game__images__list"> <img class="game__images__screenshot2 game__image" src="./css/images/screanshoot2.png" alt="screen2"></li>
-            <li class="game__images__list"> <img class="game__images__screenshot3 game__image" src="./css/images/screanshoot3.png" alt="screen"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot1 game__image"
+                src="./css/images/screanshoot1.png" alt="screen1"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot2 game__image"
+                src="./css/images/screanshoot2.png" alt="screen2"></li>
+            <li class="game__images__list"> <img class="game__images__screenshot3 game__image"
+                src="./css/images/screanshoot3.png" alt="screen"></li>
           </ul>
         </div>
       </div>
     </section>
-    <section>
-      <h1>
-        What’s so special?
-      </h1>
-      <h2>
-        features
-      </h2>
-      <h3>
-        Survuve at all costs
-      </h3>
-      <p>
-        You have 30 minutes to find a relic, signal for extraction, and grab
-        one of three spots on the rescue chopper.
-      </p>
-      <h3>
-        Create allies and anemies
-      </h3>
-      <h3>
-        impress the audiance
-      </h3>
+    <section class="game__second__section">
+      <div class="second__container">
+        <div class="second__section__info">
+          <h1 class="game__second__section--header">
+            What’s so special?
+          </h1>
+          <h2 class="game__second__section--subheader">
+            features
+          </h2>
+          <h3 class="game__second__section--smalheader">
+            Survuve at all costs
+          </h3>
+          <p class="game__second__section--paragraph">
+            You have 30 minutes to find a relic, signal for extraction, and grab
+            one of three spots on the rescue chopper.
+          </p>
+          <h3 class="game__second__section--smalheader">
+            Create allies and anemies
+          </h3>
+          <h3 class="game__second__section--smalheader">
+            impress the audiance
+          </h3>
+        </div>
+      </div>
     </section>
   </main>
 
