--- a/webroot/index.html
+++ b/webroot/index.html
@@ -174,6 +174,18 @@
         </div>
       </div>
     </section>
+    <section class="game__third__section">
+      <h1>
+        Can My Computer Run this game?
+      </h1>
+      <h2>
+        system requirements
+      </h2>
+      <table>
+        
+      </table>
+
+    </section>
   </main>
 
 
