Fixed html without class name yet and upload all images which are need to be used

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -182,13 +182,155 @@
         system requirements
       </h2>
       <table>
-        
-      </table>
+        <tr>
+          <td>
+            <h1>
+              os:
+            </h1>
+            Windows 7 64-bit only
+            (No OSX support at this time)
 
+          </td>
+          <td>
+            <h1>Processor:</h1>
+            Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <h1>
+              memory:
+            </h1>
+            8 GB RAM
+
+          </td>
+          <td>
+            <h1>
+              storage:
+            </h1>
+            8 GB available space
+          </td>
+        </tr>
+        <tr>
+          <h1>
+            Graphics:
+          </h1>
+          <td>
+            NVIDIA GeForce GTX 660 2GB or
+            AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)
+          </td>
+        </tr>
+      </table>
+    </section>
+    <section>
+      <h1>
+        What people think?
+      </h1>
+      <h2>Press quotes</h2>
+      <p>
+        Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re
+        constantly working on our services to make it better every day and really listen to what our users has to say.
+      </p>
+      <button>
+        Read more testemonial
+      </button>
+      <article>
+        <img src="./css/images/lahti-imagebig.png" alt="Lahti">
+        <h1>
+          Evan Lahti
+        </h1>
+        <h2>
+          PC Gamer
+        </h2>
+        <p>“One of my gaming highlights of the year.”</p>
+        <footer>October 18, 2018</footer>
+      </article>
+      <article>
+        <img src="./css/images/jada-imagebig.png" alt="Jada">
+        <h1>
+          Jada Griffin
+        </h1>
+        <h2>
+          Nerdreactor
+        </h2>
+        <p>
+          “The next big thing in the world of streaming and survival games.”
+        </p>
+        <footer>December 21, 2018</footer>
+      </article>
+      <article>
+        <img src="./css/images/aaron-imagebig.png" alt="Aaron">
+        <h1>
+          Aaron Williams
+        </h1>
+        <h2>
+          Uproxx
+        </h2>
+        <p>
+          “Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”
+        </p>
+        <footer>December 24, 2018</footer>
+      </article>
+    </section>
+    <section>
+      <h1>
+        Want to stay in touch?
+      </h1>
+      <h2>
+        newsletter subscribe
+      </h2>
+      <p>
+        In order to start receiving our news, all you have to do is enter your email address. Everything else will be
+        taken care
+        of by us. We will send you emails containing information about game. We don’t spam.
+      </p>
+      <div>
+        <p>
+          Your email address
+        </p>
+        <span>
+          aliciliniavopir@gmail.com
+        </span>
+      </div>
+      <button>Subscribe now</button>
     </section>
   </main>
-
-
+  <footer>
+    <img src="./css/images/logo-big.png" alt="logo">
+    <nav>
+      <ul>
+        <li><a href="./main">main</a></li>
+        <li><a href="#/about">About</a></li>
+        <li><a href="./feature">Game features</a></li>
+        <li><a href="#/system">System requerement</a></li>
+        <li><a href="#/quote">Quotes</a></li>
+      </ul>
+    </nav>
+    <nav>
+      <ul>
+        <li><a href="/facebook">facebook</a></li>
+        <li><a href="/twitter">Twitter</a></li>
+        <li><a href="/vectore">vectore</a></li>
+        <li><a href="/message">message</a></li>
+      </ul>
+    </nav>
+    <p>
+      © 2018 Outpost Games, Inc. All Rights Reserved
+    </p>
+    <nav>
+      <ul>
+        <li>
+          <a href="/privacy">Privacy Policy</a>
+        </li>
+        <li>
+          <a href="">| Terms of Services |</a>
+        </li>
+        <li>
+          <a href="">Code of conduct </a>
+        </li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 
 </html>
