Made change in the fonts

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -175,47 +175,47 @@
       </div>
     </section>
     <section class="game__third__section">
-      <h1>
+      <h1 class="game__third__section--header">
         Can My Computer Run this game?
       </h1>
-      <h2>
+      <h2 class="game__third__section--subheader">
         system requirements
       </h2>
       <table>
         <tr>
           <td>
-            <h1>
+            <h4>
               os:
-            </h1>
+            </h4>
             Windows 7 64-bit only
             (No OSX support at this time)
 
           </td>
           <td>
-            <h1>Processor:</h1>
+            <h4>Processor:</h4>
             Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ
           </td>
         </tr>
         <tr>
           <td>
-            <h1>
+            <h4>
               memory:
-            </h1>
+            </h4>
             8 GB RAM
 
           </td>
           <td>
-            <h1>
+            <h4>
               storage:
-            </h1>
+            </h4>
             8 GB available space
           </td>
         </tr>
         <tr>
-          <h1>
-            Graphics:
-          </h1>
           <td>
+            <h4>
+              Graphics:
+            </h4>
             NVIDIA GeForce GTX 660 2GB or
             AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)
           </td>
