--- a/webroot/index.html
+++ b/webroot/index.html
@@ -181,10 +181,10 @@
       <h2 class="game__third__section--subheader">
         system requirements
       </h2>
-      <table>
+      <table class="game__third__section__table">
         <tr>
           <td>
-            <h4>
+            <h4 class="game__third__section__table--header">
               os:
             </h4>
             Windows 7 64-bit only
@@ -192,20 +192,22 @@
 
           </td>
           <td>
-            <h4>Processor:</h4>
+            <h4 class="game__third__section__table--header">
+              Processor:
+            </h4>
             Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ
           </td>
         </tr>
         <tr>
           <td>
-            <h4>
+            <h4 class="game__third__section__table--header">
               memory:
             </h4>
             8 GB RAM
 
           </td>
           <td>
-            <h4>
+            <h4 class="game__third__section__table--header">
               storage:
             </h4>
             8 GB available space
@@ -213,7 +215,7 @@
         </tr>
         <tr>
           <td>
-            <h4>
+            <h4 class="game__third__section__table--header">
               Graphics:
             </h4>
             NVIDIA GeForce GTX 660 2GB or
