--- a/webroot/index.html
+++ b/webroot/index.html
@@ -175,62 +175,66 @@
       </div>
     </section>
     <section class="game__third__section">
-      <h1 class="game__third__section--header">
-        Can My Computer Run this game?
-      </h1>
-      <h2 class="game__third__section--subheader">
-        system requirements
-      </h2>
-      <table class="game__third__section__table">
-        <tr class="game__third__section__tablerow">
-          <td class="game__third__section__tablecell--first-row">
-            <h4 class="game__third__section__table--header">
-              os:
-            </h4>
-            <p class="game__third__section__table-paragraph">
-              Windows 7 64-bit only
-              (No OSX support at this time)
-            </p>
-          </td>
-          <td class="game__third__section__tablecell--secondcol">
-            <h4 class="game__third__section__table--header">
-              Processor:
-            </h4>
-            <p class="game__third__section__table-paragraph">
-              Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ
-            </p>
-          </td>
-        </tr>
-        <tr class="game__third__section__tablerow">
-          <td class="game__third__section__tablecell">
-            <h4 class="game__third__section__table--header">
-              memory:
-            </h4>
-            <p class="game__third__section__table-paragraph">
-              8 GB RAM
-            </p>
-          </td>
-          <td class="game__third__section__tablecell--secondrowcol">
-            <h4 class="game__third__section__table--header">
-              storage:
-            </h4>
-            <p class="game__third__section__table-paragraph">
-              8 GB available space
-            </p>
-          </td>
-        </tr>
-        <tr class="game__third__section__tablerow">
-          <td class="game__third__section__tablecell--lastrow" colspan="2">
-            <h4 class="game__third__section__table--header">
-              Graphics:
-            </h4>
-            <p class="game__third__section__table-paragraph">
-              NVIDIA GeForce GTX 660 2GB or
-              AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)
-            </p>
-          </td>
-        </tr>
-      </table>
+      <div class="third_container">
+        <div class="game__third__section--info">
+          <h1 class="game__third__section--header">
+            Can My Computer Run this game?
+          </h1>
+          <h2 class="game__third__section--subheader">
+            system requirements
+          </h2>
+          <table class="game__third__section__table">
+            <tr class="game__third__section__tablerow">
+              <td class="game__third__section__tablecell--first-row">
+                <h4 class="game__third__section__table--header">
+                  os:
+                </h4>
+                <p class="game__third__section__table-paragraph">
+                  Windows 7 64-bit only
+                  (No OSX support at this time)
+                </p>
+              </td>
+              <td class="game__third__section__tablecell--secondcol">
+                <h4 class="game__third__section__table--header">
+                  Processor:
+                </h4>
+                <p class="game__third__section__table-paragraph">
+                  Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8GHZ
+                </p>
+              </td>
+            </tr>
+            <tr class="game__third__section__tablerow">
+              <td class="game__third__section__tablecell">
+                <h4 class="game__third__section__table--header">
+                  memory:
+                </h4>
+                <p class="game__third__section__table-paragraph">
+                  8 GB RAM
+                </p>
+              </td>
+              <td class="game__third__section__tablecell--secondrowcol">
+                <h4 class="game__third__section__table--header">
+                  storage:
+                </h4>
+                <p class="game__third__section__table-paragraph">
+                  8 GB available space
+                </p>
+              </td>
+            </tr>
+            <tr class="game__third__section__tablerow">
+              <td class="game__third__section__tablecell--lastrow" colspan="2">
+                <h4 class="game__third__section__table--header">
+                  Graphics:
+                </h4>
+                <p class="game__third__section__table-paragraph">
+                  NVIDIA GeForce GTX 660 2GB or
+                  AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)
+                </p>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </section>
     <section>
       <h1>
