Fixed the fourth section

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -236,54 +236,62 @@
         </div>
       </div>
     </section>
-    <section>
-      <h1>
+    <section class="game__fourth__section">
+      <h1 class="game__fourth__section--header">
         What people think?
       </h1>
-      <h2>Press quotes</h2>
-      <p>
+      <h2 class="game__fourth__section--subheader">Press quotes</h2>
+      <p class="game__fourth__section--paragraph">
         Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re
         constantly working on our services to make it better every day and really listen to what our users has to say.
       </p>
-      <button>
+      <div class="button">
+      <button class="game__fourth__section--button">
         Read more testemonial
       </button>
-      <article>
-        <img src="./css/images/lahti-imagebig.png" alt="Lahti">
-        <h1>
+      </div >
+      <article class="game__fourth__section__aboutperson lahti">
+        <a href="/profile">
+          <img src="./css/images/lahti-imagebig.png" class="profile" alt="Jada">
+        </a>
+        <h3 class="game__fourth__section__aboutperson--name">
           Evan Lahti
-        </h1>
-        <h2>
+        </h3>
+        <h4 class="game__fourth__section__aboutperson--project">
           PC Gamer
-        </h2>
-        <p>“One of my gaming highlights of the year.”</p>
-        <footer>October 18, 2018</footer>
+        </h4>
+        <p class="game__fourth__section__aboutperson--info">“One of my gaming highlights of the year.”</p>
+        <footer class="game__fourth__section__aboutperson--date">October 18, 2018</footer>
       </article>
-      <article>
-        <img src="./css/images/jada-imagebig.png" alt="Jada">
-        <h1>
+      <article class="game__fourth__section__aboutperson jada">
+        <a href="/profile">
+          <img src="./css/images/jada-imagebig.png" class="profile" alt="Jada">
+        </a>
+        <h3 class="game__fourth__section__aboutperson--name">
           Jada Griffin
-        </h1>
-        <h2>
+        </h3>
+        <h4 class="game__fourth__section__aboutperson--project">
           Nerdreactor
-        </h2>
-        <p>
+        </h4>
+        <p class="game__fourth__section__aboutperson--info">
           “The next big thing in the world of streaming and survival games.”
         </p>
-        <footer>December 21, 2018</footer>
-      </article>
-      <article>
-        <img src="./css/images/aaron-imagebig.png" alt="Aaron">
-        <h1>
+        <footer class="game__fourth__section__aboutperson--date">December 21, 2018</footer>
+      </article class="game__fourth__section__aboutperson">
+      <article class="game__fourth__section__aboutperson aaron">
+        <a href="/profile">
+          <img src="./css/images/aaron-imagebig.png" class="profile" alt="Aaron">
+        </a>
+        <h3 class="game__fourth__section__aboutperson--name">
           Aaron Williams
-        </h1>
-        <h2>
+        </h3>
+        <h4 class="game__fourth__section__aboutperson--project">
           Uproxx
-        </h2>
-        <p>
+        </h4>
+        <p class="game__fourth__section__aboutperson--info">
           “Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”
         </p>
-        <footer>December 24, 2018</footer>
+        <footer class="game__fourth__section__aboutperson--date">December 24, 2018</footer>
       </article>
     </section>
     <section>
