Create fith file and upload an image for that

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -246,53 +246,55 @@
         constantly working on our services to make it better every day and really listen to what our users has to say.
       </p>
       <div class="button">
-      <button class="game__fourth__section--button">
-        Read more testemonial
-      </button>
-      </div >
-      <article class="game__fourth__section__aboutperson lahti">
-        <a href="/profile">
-          <img src="./css/images/lahti-imagebig.png" class="profile" alt="Jada">
-        </a>
-        <h3 class="game__fourth__section__aboutperson--name">
-          Evan Lahti
-        </h3>
-        <h4 class="game__fourth__section__aboutperson--project">
-          PC Gamer
-        </h4>
-        <p class="game__fourth__section__aboutperson--info">“One of my gaming highlights of the year.”</p>
-        <footer class="game__fourth__section__aboutperson--date">October 18, 2018</footer>
-      </article>
-      <article class="game__fourth__section__aboutperson jada">
-        <a href="/profile">
-          <img src="./css/images/jada-imagebig.png" class="profile" alt="Jada">
-        </a>
-        <h3 class="game__fourth__section__aboutperson--name">
-          Jada Griffin
-        </h3>
-        <h4 class="game__fourth__section__aboutperson--project">
-          Nerdreactor
-        </h4>
-        <p class="game__fourth__section__aboutperson--info">
-          “The next big thing in the world of streaming and survival games.”
-        </p>
-        <footer class="game__fourth__section__aboutperson--date">December 21, 2018</footer>
-      </article class="game__fourth__section__aboutperson">
-      <article class="game__fourth__section__aboutperson aaron">
-        <a href="/profile">
-          <img src="./css/images/aaron-imagebig.png" class="profile" alt="Aaron">
-        </a>
-        <h3 class="game__fourth__section__aboutperson--name">
-          Aaron Williams
-        </h3>
-        <h4 class="game__fourth__section__aboutperson--project">
-          Uproxx
-        </h4>
-        <p class="game__fourth__section__aboutperson--info">
-          “Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”
-        </p>
-        <footer class="game__fourth__section__aboutperson--date">December 24, 2018</footer>
-      </article>
+        <button class="game__fourth__section--button">
+          Read more testemonial
+        </button>
+      </div>
+      <div class="game__fourth__section__about--container">
+        <article class="game__fourth__section__aboutperson lahti">
+          <a href="/profile">
+            <img src="./css/images/lahti-imagebig.png" class="profile" alt="Jada">
+          </a>
+          <h3 class="game__fourth__section__aboutperson--name">
+            Evan Lahti
+          </h3>
+          <h4 class="game__fourth__section__aboutperson--project">
+            PC Gamer
+          </h4>
+          <p class="game__fourth__section__aboutperson--info">“One of my gaming highlights of the year.”</p>
+          <footer class="game__fourth__section__aboutperson--date">October 18, 2018</footer>
+        </article>
+        <article class="game__fourth__section__aboutperson jada">
+          <a href="/profile">
+            <img src="./css/images/jada-imagebig.png" class="profile" alt="Jada">
+          </a>
+          <h3 class="game__fourth__section__aboutperson--name">
+            Jada Griffin
+          </h3>
+          <h4 class="game__fourth__section__aboutperson--project">
+            Nerdreactor
+          </h4>
+          <p class="game__fourth__section__aboutperson--info">
+            “The next big thing in the world of streaming and survival games.”
+          </p>
+          <footer class="game__fourth__section__aboutperson--date">December 21, 2018</footer>
+        </article class="game__fourth__section__aboutperson">
+        <article class="game__fourth__section__aboutperson aaron">
+          <a href="/profile">
+            <img src="./css/images/aaron-imagebig.png" class="profile" alt="Aaron">
+          </a>
+          <h3 class="game__fourth__section__aboutperson--name">
+            Aaron Williams
+          </h3>
+          <h4 class="game__fourth__section__aboutperson--project">
+            Uproxx
+          </h4>
+          <p class="game__fourth__section__aboutperson--info">
+            “Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”
+          </p>
+          <footer class="game__fourth__section__aboutperson--date">December 24, 2018</footer>
+        </article>
+      </div>
     </section>
     <section>
       <h1>
