Fixed the second section change the html

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -150,29 +150,44 @@
       </div>
     </section>
     <section class="game__second__section">
-      <div class="second__container">
-        <div class="second__section__info">
-          <h1 class="game__second__section--header">
-            What’s so special?
-          </h1>
-          <h2 class="game__second__section--subheader">
-            features
-          </h2>
-          <h3 class="game__second__section--smalheader">
-            Survuve at all costs
-          </h3>
-          <p class="game__second__section--paragraph">
-            You have 30 minutes to find a relic, signal for extraction, and grab
-            one of three spots on the rescue chopper.
-          </p>
-          <h3 class="game__second__section--smalheader">
-            Create allies and anemies
-          </h3>
-          <h3 class="game__second__section--smalheader">
-            impress the audiance
-          </h3>
-        </div>
-      </div>
+      <article class="game__second__section__container">
+        <header class=" game__second__section__header">
+          <h3 class=" game__second__section__header--title">Features</h3>
+          <p class="game__second__section__header--info">What's so special?</p>
+        </header>
+        <ul class="game__second__section__navigation">
+          <li class="game__second__section__navigation--list">
+            <details class="game__second__section__detail">
+              <summary class="game__second__section__summary">Survive at all costs</summary>
+              <p>You have 30 minutes to find a relic, signal for extraction, and grab
+                one of three spots on the rescue chopper.</p>
+            </details>
+          </li>
+          <li class="game__second__section__navigation--list">
+            <details class="game__second__section__detail">
+              <summary class="game__second__section__summary">Create allies and enemies</summary>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae, impedit nam, reiciendis
+                commodi
+                itaque cupiditate minima inventore molestiae voluptatum ad, dolor quia ea accusantium nesciunt? Sequi,
+                itaque.
+                Quidem, natus.
+              </p>
+            </details>
+          </li>
+          <li class="game__second__section__navigation--list">
+            <details class="game__second__section__detail">
+              <summary class="game__second__section__summary">Impress your audience</summary>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nobis, qui modi, ratione ea saepe eum
+                iure
+                officiis iusto mollitia nihil unde odio, possimus quo consectetur praesentium harum nesciunt illum?
+              </p>
+            </details>
+          </li>
+        </ul>
+      </article>
+    </section>
     </section>
     <section class="game__third__section">
       <div class="third_container">
@@ -296,27 +311,25 @@
         </article>
       </div>
     </section>
-    <section>
-      <h1>
-        Want to stay in touch?
-      </h1>
-      <h2>
-        newsletter subscribe
-      </h2>
-      <p>
-        In order to start receiving our news, all you have to do is enter your email address. Everything else will be
-        taken care
-        of by us. We will send you emails containing information about game. We don’t spam.
-      </p>
-      <div>
-        <p>
-          Your email address
+    <section class="game__fith__section">
+      <div class="fith__container">
+        <h2 class="game__fith__section--header">
+          Want to stay in touch?
+        </h2>
+        <h3 class="game__fith__section--subheader">
+          newsletter subscribe
+        </h3>
+        <p class="game__fith__section--paragraph">
+          In order to start receiving our news, all you have to do is enter your email address. Everything else will be
+          taken care
+          of by us. We will send you emails containing information about game. We don’t spam.
         </p>
-        <span>
-          aliciliniavopir@gmail.com
-        </span>
+        <form>
+          <input type="email" id="email" pattern=".+@gmail.com" value="Your email address aliciliniavopir@gmail.com"
+            required>
+        </form>
+        <button>Subscribe now</button>
       </div>
-      <button>Subscribe now</button>
     </section>
   </main>
   <footer>
